# aiad-fesi-crew

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.viz/: stats.json
conf/base/: catalog.yml  parameters.yml  parameters_data_split.yml  parameters_inference.yml  parameters_mask_merge.yml  parameters_preprocessing.yml
docker/: Dockerfile.kedro  Dockerfile.train  Dockerfile.ui  entrypoint.sh  entrypoint.train.sh  gunicorn.conf.py  requirements.ui.txt
k8s/: cm-kedro-conf.yaml  deploy-ui.yaml  job-data-preprocessing.yaml  job-ingestion.yaml  job-mask-apply.yaml  job-split.yaml  job-train.yaml  pvc-data.yaml  ui-deployment.yaml  ui-hpa.yaml  ui-ingress.yaml  ui-service.yaml
src/aiad_fesi_crew/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/aiad_fesi_crew/pipelines/data_ingestion/: nodes.py  pipeline.py
src/aiad_fesi_crew/pipelines/data_preprocessing/: nodes.py  pipeline.py
src/aiad_fesi_crew/pipelines/data_split/: __init__.py  nodes.py  pipeline.py
src/aiad_fesi_crew/pipelines/inference/: __init__.py  nodes.py  pipeline.py
src/aiad_fesi_crew/pipelines/mask_merge/: __init__.py  nodes.py  pipeline.py
src/aiad_fesi_crew/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
src/aiad_fesi_crew/ui/: __init__.py  inference.py  routes.py
tests/pipelines/data_science/: test_pipeline.py
tests/pipelines/data_split/: test_pipeline.py
tests/pipelines/inference/: test_pipeline.py
tests/pipelines/mask_merge/: test_pipeline.py
tests/pipelines/preprocessing/: test_pipeline.py
(+7 files in other folders)
