[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiad_fesi_crew"
requires-python = ">=3.9"
readme = "README.md"
dynamic = ["version"]
dependencies = [
  "ipython>=8.10",
  "jupyterlab>=3.0",
  "notebook",
  "kedro[jupyter]~=0.19.14",
  "kedro-datasets[pandas]==7.0.0",
  "kedro-viz>=6.7.0",
  "scikit-learn~=1.5.1",
  "seaborn~=0.12.1",
  "tensorflow==2.15.0"   # CPU build that worked for you
]

[project.scripts]
aiad-fesi-crew = "aiad_fesi_crew.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest-cov~=3.0",
  "pytest-mock>=1.7.1, <2.0",
  "pytest~=7.2",
  "ruff~=0.1.8",
]

[tool.kedro]
package_name = "aiad_fesi_crew"
project_name = "aiad-fesi-crew"
kedro_init_version = "0.19.14"
tools = ["Linting", "Testing", "Data Structure"]
example_pipeline = true
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/aiad_fesi_crew -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "aiad_fesi_crew.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro_telemetry]
project_id = "d50b7c838a9845ad98c6336419434b77"
